# license9_nav

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  START_HERE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/report-render/: XSQ_Long_Commentary_QA.docx
artifacts/sample-reports/: XSQ_2026_Q1_DOCX_Audit.json  XSQ_2026_Q1_Quarterly_Report.docx
artifacts/visual-qa/: monthly-report-docx-audit.json  visual-qa-results.json
artifacts/visual-qa-zh/: visual-qa-results.json
config/: settings.py  urls.py
deploy/: nginx.conf
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  BACKUP_RESTORE.md  CALCULATION_METHODOLOGY.md  CODEX_MASTER_PROMPT.md  DEPLOYMENT_VPS.md  ENGINEERING_HANDOVER.md  EXEC_PLAN.md  FINAL_VALIDATION_REPORT.md  FORMULA_DIFFERENCES.md  IMPLEMENTATION_STATUS.md  KNOWN_LIMITATIONS.md  REPORT_GENERATION.md  RFR_METHODOLOGY.md  TEST_REPORT.md  USER_GUIDE.md  formulas.md  operations.md  reference_analysis.md  report_template_guide.md
navapp/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
navapp/migrations/: 0001_initial.py  0002_alter_navrecord_nav_per_share_and_more.py  0003_alter_rfrsnapshot_annual_value_decimal.py  (+3 more)
reference/: app_spec.md  formula_audit.md  xsq_2026_q1_newsletter.docx  xsq_nav_history.xlsx
scripts/: backup.sh  build_long_commentary_qa.py  inspect_docx.py  restore.sh  smoke_report.sh  visual_qa.cjs
templates/: base.html
tests/: conftest.py  test_calculations.py  test_imports_models_web.py  test_reports.py  test_rfr.py
(+31 files in other folders)
