[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nav-quarterly-report"
version = "0.1.0"
description = "Internal multi-fund NAV quarterly report application"
requires-python = ">=3.12"
dependencies = [
  "Django==5.2.15",
  "bleach==6.2.0",
  "docxtpl==0.20.2",
  "gunicorn==23.0.0",
  "Markdown==3.8.2",
  "matplotlib==3.11.0",
  "openpyxl==3.1.5",
  "psycopg[binary]==3.3.4",
  "python-docx==1.2.0",
  "requests==2.34.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-django==4.12.0",
  "ruff==0.15.22",
]

[tool.setuptools.packages.find]
include = ["config*", "navapp*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["integration: requires system services such as LibreOffice"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations", "reference", "tmp", "media", "staticfiles"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DJ"]
ignore = ["DJ001", "DJ006", "DJ012", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
